2007-06-28  Alex Roitman  <shura@gramps-project.org>
	* src/ScratchPad.py (ScratchSourceLink.tooltip): Typo.

2007-06-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RemoveUnused.py (init_gui): Add missing argument.

2007-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py (_gen_cooked_func,_gen_raw_func): Do not
	replace %% with anything.

2007-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/BookReport.py (on_booklist_ok_clicked): Handle unicode names

2007-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenOfficeDoc.py (rotate_text, init): remove fill color to 
	  improve the fanchart display (#0001072)

2007-06-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py (rotate_text, init): fix rotated text location and 
	  remove background color to improve the fanchart display (#0001072)

2007-06-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Typo.
	(version_supported): Default to the current version.
	* src/DbLoader.py (read_file): Fix error reporting.

2007-06-23  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RemoveUnused.py: Rewrite with single-dialog UI.
	* src/plugins/unused.glade: Add new file.
	* src/plugins/Makefile.am: Ship new file.

2007-06-23  Brian Matherly  <brian@gramps-project.org>
	* src/Filters/Rules/Person/__init__.py:
	* src/Filters/Rules/Person/Makefile.am:
	* src/Filters/Rules/Person/_MissingParent.py:
	  Add "People missing parent" filter.

2007-06-23  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: Fix attribute error exceptions.

2007-06-23  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0001016: [narrative website] Why is the mime 
	  type shown on each image page

2007-06-22  Alex Roitman  <shura@phy.ucsf.edu>
	* src/GrampsDb/_GrampsGEDDB.py (close): Save after batch 
	transactions: #862.
	* src/GrampsDb/_GrampsXMLDB.py (close): Save after batch